scaffolder-cli validating to TemplateEntityV1beta3

--- a/packages/scaffolder-cli/package.json
+++ b/packages/scaffolder-cli/package.json
@@ -41,7 +41,9 @@
     "watch": "./src"
   },
   "dependencies": {
+    "@backstage/catalog-model": "workspace:^",
     "@backstage/errors": "workspace:^",
+    "@backstage/plugin-scaffolder-common": "workspace:^",
     "@backstage/plugin-scaffolder-node": "workspace:^",
     "@backstage/plugin-scaffolder-react": "workspace:^",
     "@backstage/types": "workspace:^",
