chore: techdocs reload tests, refactor
Signed-off-by: Gabriel Dugny <gabriel.dugny@believe.com>

--- a/packages/techdocs-cli-embedded-app/app-config.yaml
+++ b/packages/techdocs-cli-embedded-app/app-config.yaml
@@ -8,7 +8,6 @@ backend:
 techdocs:
   builder: 'external'
   sanitizer:
-    # Allow live reload locally
-    # XXX(GabDug): move out of this config, so we don't conflict with config in custom embedded apps
-    allowedCustomElementTagNameRegExp: 'live-reload'
-    allowedCustomElementAttributeNameRegExp: 'live-reload-epoch|live-reload-request-id'
+    # Allow live reload locally. Added in this config to avoid updating the main techdocs plugin.
+    allowedCustomElementTagNameRegExp: '^live-reload$'
+    allowedCustomElementAttributeNameRegExp: '^live-reload-(epoch|request-id)$'
