remove http routes
Signed-off-by: aramissennyeydd <aramis.sennyey@doordash.com>

--- a/packages/backend-app-api/package.json
+++ b/packages/backend-app-api/package.json
@@ -48,8 +48,7 @@
   "dependencies": {
     "@backstage/backend-plugin-api": "workspace:^",
     "@backstage/config": "workspace:^",
-    "@backstage/errors": "workspace:^",
-    "express-promise-router": "^4.1.0"
+    "@backstage/errors": "workspace:^"
   },
   "devDependencies": {
     "@backstage/backend-defaults": "workspace:^",
