--- a/plugins/mui-to-bui/package.json
+++ b/plugins/mui-to-bui/package.json
@@ -16,7 +16,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/backstage/backstage",
-    "directory": "plugins/bui-themer"
+    "directory": "plugins/mui-to-bui"
   },
   "license": "Apache-2.0",
   "sideEffects": false,
