--- a/packages/backend-defaults/package.json
+++ b/packages/backend-defaults/package.json
@@ -204,6 +204,7 @@
     "@backstage/backend-plugin-api": "workspace:^",
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
+    "@backstage/plugin-catalog-common": "workspace:^",
     "@google-cloud/cloud-sql-connector": "^1.4.0",
     "@types/archiver": "^6.0.0",
     "@types/base64-stream": "^1.0.2",
