--- a/plugins/kubernetes-node/package.json
+++ b/plugins/kubernetes-node/package.json
@@ -52,6 +52,7 @@
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
     "@backstage/plugin-kubernetes-backend": "workspace:^",
+    "@types/express": "^4.17.6",
     "msw": "^1.3.1",
     "supertest": "^7.0.0"
   }
