--- a/packages/eslint-plugin/src/__fixtures__/monorepo/packages/bar-override/package.json
+++ b/packages/eslint-plugin/src/__fixtures__/monorepo/packages/bar-override/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@internal/bar",
+  "name": "@internal/bar-override",
   "backstage": {
     "role": "frontend-plugin",
     "pluginId": "bar"
