--- a/packages/eslint-plugin/src/__fixtures__/monorepo/packages/foo/package.json
+++ b/packages/eslint-plugin/src/__fixtures__/monorepo/packages/foo/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@internal/foo",
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "foo"
   },
   "files": [
     "dist",
