--- a/.github/workflows/verify_microsite.yml
+++ b/.github/workflows/verify_microsite.yml
@@ -28,7 +28,7 @@ jobs:
 
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.1
+        uses: step-security/harden-runner@v2.13.1 # v2.13.1
         with:
           egress-policy: audit
 
@@ -137,7 +137,7 @@ jobs:
 
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.1
+        uses: step-security/harden-runner@v2.13.1 # v2.13.1
         with:
           egress-policy: audit
 
@@ -234,7 +234,7 @@ jobs:
     name: Microsite
     steps:
       - name: Harden Runner
-        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911 # v2.13.1
+        uses: step-security/harden-runner@v2.13.1 # v2.13.1
         with:
           egress-policy: audit
 
