--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -47,16 +47,19 @@
     "chalk": "^4.0.0",
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
+    "global-agent": "^3.0.0",
     "handlebars": "^4.7.3",
     "inquirer": "^8.2.0",
     "ora": "^5.3.0",
-    "recursive-readdir": "^2.2.2"
+    "recursive-readdir": "^2.2.2",
+    "undici": "^7.2.3"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "workspace:^",
     "@types/command-exists": "^1.2.0",
     "@types/fs-extra": "^11.0.0",
+    "@types/global-agent": "^3",
     "@types/inquirer": "^8.1.3",
     "@types/node": "^20.16.0",
     "@types/recursive-readdir": "^2.2.0",
