--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,6 +4,11 @@ on:
   pull_request_target:
     types: [opened]
 
+permissions:
+  issues: write  
+  pull-requests: write 
+  contents: read 
+
 jobs:
   welcome:
     runs-on: ubuntu-latest
