--- a/.github/workflows/verify_e2e-linux.yml
+++ b/.github/workflows/verify_e2e-linux.yml
@@ -3,11 +3,11 @@ on:
   # NOTE: If you change these you must update verify_e2e-linux-noop.yml as well
   pull_request:
     paths-ignore:
-      - ".changeset/**"
-      - "contrib/**"
-      - "docs/**"
-      - "microsite/**"
-      - "beps/**"
+      - '.changeset/**'
+      - 'contrib/**'
+      - 'docs/**'
+      - 'microsite/**'
+      - 'beps/**'
   push:
     branches: [master]
 
