fix(notifications): update ses to v2
this to prevent error message being thrown with nodemailer v7 from email
notifications. fixes #31457

Signed-off-by: Hellgren Heikki <heikki.hellgren@op.fi>

--- a/plugins/notifications-backend-module-email/package.json
+++ b/plugins/notifications-backend-module-email/package.json
@@ -34,7 +34,7 @@
     "test": "backstage-cli package test"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.550.0",
+    "@aws-sdk/client-sesv2": "^3.911.0",
     "@azure/communication-email": "^1.0.0",
     "@azure/identity": "^4.0.0",
     "@backstage/backend-plugin-api": "workspace:^",
