--- a/.github/workflows/verify_chromatic.yml
+++ b/.github/workflows/verify_chromatic.yml
@@ -72,8 +72,16 @@ jobs:
             echo "changes-text=**${{ steps.chromatic.outputs.changeCount }}** visual changes are waiting for review - [**Review changes in Chromatic**](${{ steps.chromatic.outputs.buildUrl }})" >> $GITHUB_OUTPUT
           fi
 
-      - name: Post Chromatic Link in PR Comment
+      - name: Post Chromatic Results to Job Summary
         if: github.event_name == 'pull_request' && steps.chromatic.outputs.url
+        run: |
+          echo "## 🎨 Visual Testing with Chromatic" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- ${{ steps.prepare-message.outputs.changes-text }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **${{ steps.chromatic.outputs.specCount}}** stories for **${{ steps.chromatic.outputs.componentCount}}** Components - [**Preview changes in Storybook**](${{ steps.chromatic.outputs.storybookUrl }})" >> $GITHUB_STEP_SUMMARY
+
+      - name: Post Chromatic Link in PR Comment
+        if: github.event_name == 'pull_request' && steps.chromatic.outputs.url && github.event.pull_request.head.repo.full_name == github.repository
         uses: mshick/add-pr-comment@v2
         with:
           message: |
