--- a/docs-ui/package.json
+++ b/docs-ui/package.json
@@ -33,10 +33,11 @@
     "prop-types": "^15.8.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "shiki": "^1.26.1",
+    "shiki": "^3.13.0",
     "storybook": "^8.6.12"
   },
   "devDependencies": {
+    "@shikijs/transformers": "^3.13.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
     "@types/react": "19.1.9",
