--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -124,6 +124,7 @@
     "pirates": "^4.0.6",
     "postcss": "^8.1.0",
     "process": "^0.11.10",
+    "proper-lockfile": "^4.1.2",
     "raw-loader": "^4.0.2",
     "react-dev-utils": "^12.0.0-next.60",
     "react-refresh": "^0.17.0",
@@ -176,6 +177,7 @@
     "@types/inquirer": "^8.1.3",
     "@types/node": "^20.16.0",
     "@types/npm-packlist": "^3.0.0",
+    "@types/proper-lockfile": "^4",
     "@types/recursive-readdir": "^2.2.0",
     "@types/rollup-plugin-peer-deps-external": "^2.2.0",
     "@types/rollup-plugin-postcss": "^3.1.4",
