Use theme ID context instead default 'backstage' value
Signed-off-by: gaelgoth <gothuey.gael@gmail.com>

--- a/packages/core-app-api/package.json
+++ b/packages/core-app-api/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@backstage/config": "workspace:^",
     "@backstage/core-plugin-api": "workspace:^",
+    "@backstage/theme": "workspace:^",
     "@backstage/types": "workspace:^",
     "@backstage/version-bridge": "workspace:^",
     "@types/prop-types": "^15.7.3",
