--- a/plugins/signals/package.json
+++ b/plugins/signals/package.json
@@ -77,7 +77,8 @@
     "msw": "^1.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "wait-for-expect": "^3.0.2"
   },
   "peerDependencies": {
     "@types/react": "^17.0.0 || ^18.0.0",
