--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "sloc": "^0.3.1",
     "sort-package-json": "^2.8.0",
     "storybook": "^9.1.7",
+    "ts-morph": "^24.0.0",
     "typedoc": "^0.28.0",
     "typescript": "~5.7.0",
     "vite": "^7.1.5"
